[gd_scene load_steps=14 format=3 uid="uid://d0wopxyopkfbs"]

[ext_resource type="Script" path="res://ui/game_over_ui.gd" id="1_11akm"]
[ext_resource type="Texture2D" uid="uid://cgvkirpy8cho2" path="res://addons/tiny swords/UI/Ribbons/Ribbon_Red_3Slides.png" id="1_tixf7"]
[ext_resource type="Texture2D" uid="uid://cn6h21wl27ly3" path="res://addons/tiny swords/UI/Banners/Banner_Horizontal.png" id="2_4c0m6"]
[ext_resource type="AudioStream" uid="uid://btyfcvbe8gu0d" path="res://sound_effects/game_over_sound.mp3" id="4_nuidu"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mqie8"]
texture = ExtResource("1_tixf7")
texture_margin_left = 64.0
texture_margin_right = 64.0
axis_stretch_horizontal = 2

[sub_resource type="SystemFont" id="SystemFont_m7iw0"]
font_names = PackedStringArray("VCR OSD Mono")
font_weight = 999
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_6u28x"]
font = SubResource("SystemFont_m7iw0")
font_size = 45
font_color = Color(0.27, 0.0243, 0.0243, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_oaniq"]
texture = ExtResource("2_4c0m6")
texture_margin_left = 32.0
texture_margin_top = 16.0
texture_margin_right = 32.0
texture_margin_bottom = 48.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
region_rect = Rect2(32, 48, 128, 128)

[sub_resource type="SystemFont" id="SystemFont_jsijn"]
font_names = PackedStringArray("VCR OSD Mono")
font_weight = 999
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_qfof3"]
font = SubResource("SystemFont_jsijn")
font_size = 29
font_color = Color(0, 0, 0, 0.815686)

[sub_resource type="Animation" id="Animation_dwhk3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0.658824)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TopPanel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(351, 20)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BottomPanel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(290, 374)]
}

[sub_resource type="Animation" id="Animation_ykpof"]
resource_name = "default"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.392292, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.811765)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TopPanel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.732043, 1),
"update": 0,
"values": [Vector2(351, -121), Vector2(351, 56)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BottomPanel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.6, 2),
"transitions": PackedFloat32Array(0.4, 1.51572),
"update": 0,
"values": [Vector2(290, 696), Vector2(290, 393)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8abb0"]
_data = {
"RESET": SubResource("Animation_dwhk3"),
"default": SubResource("Animation_ykpof")
}

[node name="GameOverUI" type="CanvasLayer"]
script = ExtResource("1_11akm")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.658824)

[node name="TopPanel" type="Panel" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -225.0
offset_top = 20.0
offset_right = 225.0
offset_bottom = 124.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_mqie8")

[node name="GameOverLabel" type="Label" parent="TopPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -26.0
offset_right = 46.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_6u28x")

[node name="BottomPanel" type="Panel" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -286.0
offset_top = -274.0
offset_right = 287.0
offset_bottom = -88.9995
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_oaniq")

[node name="CenterContainer" type="CenterContainer" parent="BottomPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -170.0
offset_top = -45.0
offset_right = 170.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="BottomPanel/CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 25
theme_override_constants/v_separation = 25
columns = 2

[node name="Label" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
layout_mode = 2
text = "Time Survived: "
label_settings = SubResource("LabelSettings_qfof3")

[node name="TimeLabel" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "14:59"
label_settings = SubResource("LabelSettings_qfof3")

[node name="Label2" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
layout_mode = 2
text = "Monsters Defeated: "
label_settings = SubResource("LabelSettings_qfof3")

[node name="MonstersLabel" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "1234"
label_settings = SubResource("LabelSettings_qfof3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8abb0")
}
autoplay = "default"

[node name="GameOverSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_nuidu")
volume_db = 3.0
